--- a/vin01a.att0.html
+++ b/vin01a.att0.html
@@ -1,5 +1,5 @@
 <style>
-  @font-face { font-family: "Roman-Script"; src: url("../fonts/Verajja-Regular.ttf") format("truetype") }
+  @font-face { font-family: "Roman-Script"; src: url("https://sarbanandabhikkhu.github.io/tipitaka-xml/fonts/Verajja-Regular.ttf") format("truetype") }
   * { margin: 0; padding: 0; border: 0; outline: 0; box-sizing: border-box; font-family: "Roman-Script"; font-size: 14px; line-height: 1.4 }
   /* Tipiṭaka Text Style */
   p { font-size: 14px; margin-bottom: 14px }
